# audiocraft_test

./: Makefile  README.md  pyproject.toml  requirements.txt
scripts/: build.sh
