[project]
name = "audiocraft_test"
version = "0.1.0"
description = ""
authors = [
  { name = "Zedro", email = "45104292+PedroZappa@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.poetry]
# â† packages belongs here, not under [project]
packages = [
  { include = "*", from = "src" }
]
# (optional) disable if you only need dependency management
# package-mode = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
mypy = "^1.17.0"
ruff = "^0.12.4"
debugpy = "^1.8.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
